Stylesheet/emote/tag updates 2014-01-19

--- a/source-css/cloudchasermotes.css
+++ b/source-css/cloudchasermotes.css
@@ -5,191 +5,15 @@ body{background:url(%%CCisBP%%) no-repeat fixed left center}
 #title-field.roundfield:before
 
 
-a[href|="/ccpose"] {
-float:left;
-width:140px;
-height:168px;
-background-repeat:no-repeat;
-background-image:url(%%ccpose%%);
-}
-
-a[href|="/ccgiggle"] {
-float:left;
-width:150px;
-height:150px;
-background-repeat:no-repeat;
-background-image:url(%%ccgiggle%%);
-}
-
-a[href|="/ccpose2"] {
-float:left;
-width:150px;
-height:165px;
-background-repeat:no-repeat;
-background-image:url(%%ccpose2%%);
-}
-
-a[href|="/ccpaper"] {
-float:left;
-width:150px;
-height:163px;
-background-repeat:no-repeat;
-background-image:url(%%ccpaper%%);
-}
-
-a[href|="/ccdeal"] {
-float:left;
-width:139px;
-height:150px;
-background-repeat:no-repeat;
-background-image:url(%%ccdeal%%);
-}
-
-a[href|="/ccstare"] {
-float:left;
-width:150px;
-height:138px;
-background-repeat:no-repeat;
-background-image:url(%%ccstare%%);
-}
-
-a[href|="/cchmm"] {
-float:left;
-width:134px;
-height:150px;
-background-repeat:no-repeat;
-background-image:url(%%cchmm%%);
-}
-
-
-a[href|="/ccunamused"] {
-float:left;
-width:103px;
-height:150px;
-background-repeat:no-repeat;
-background-image:url(%%ccunamused%%);
-}
-
-
-a[href|="/cceww"] {
-float:left;
-width:150px;
-height:145px;
-background-repeat:no-repeat;
-background-image:url(%%cceww%%);
-}
-
-a[href|="/ccgoon"] {
-float:left;
-width:150px;
-height:105px;
-background-repeat:no-repeat;
-background-image:url(%%ccgoon%%);
-}
+/*stylesheet1 "sheet1"*/
 
 a[href|="/cccry"] {
 float:left;
 width:150px;
 height:139px;
 background-repeat:no-repeat;
-background-image:url(%%cccry%%);
-}
-
-a[href|="/ccwat"] {
-float:left;
-width:92px;
-height:150px;
-background-repeat:no-repeat;
-background-image:url(%%ccwat%%);
-}
-
-a[href|="/ccblush"] {
-float:left;
-width:150px;
-height:147px;
-background-repeat:no-repeat;
-background-image:url(%%ccblush%%);
-}
-
-a[href|="/ccshrug"] {
-float:left;
-width:150px;
-height:141px;
-background-repeat:no-repeat;
-background-image:url(%%ccshrug%%);
-}
-
-a[href|="/ccsleep"] {
-float:left;
-width:190px;
-height:127px;
-background-repeat:no-repeat;
-background-image:url(%%ccsleep%%);
-}
-
-a[href|="/ccshock"] {
-float:left;
-width:120px;
-height:150px;
-background-repeat:no-repeat;
-background-image:url(%%ccshock%%);
-}
-
-a[href|="/highhoof"] {
-float:left;
-width:250px;
-height:167px;
-background-repeat:no-repeat;
-background-image:url(%%highhoof%%);
-}
-
-a[href|="/ccsalute"] {
-float:left;
-width:150px;
-height:130px;
-background-repeat:no-repeat;
-background-image:url(%%ccsalute%%);
-}
-
-a[href|="/ccstretch"] {
-float:left;
-width:150px;
-height:139px;
-background-repeat:no-repeat;
-background-image:url(%%ccstretch%%);
-}
-
-a[href|="/ccyeah"] {
-float:left;
-width:180px;
-height:170px;
-background-repeat:no-repeat;
-background-image:url(%%ccyeah%%);
-}
-
-a[href|="/cclove"] {
-float:left;
-width:150px;
-height:208px;
-background-repeat:no-repeat;
-background-image:url(%%cclove%%);
-}
-
-a[href|="/ccarmor"] {
-float:left;
-width:150px;
-height:150px;
-background-repeat:no-repeat;
-background-image:url(%%ccarmor%%);
-}
-
-
-a[href|="/highhoof2"] {
-float:left;
-width:329px;
-height:142px;
-background-repeat:no-repeat;
-background-image:url(%%highhoof2%%);
+background-image:url(%%sheet1%%);
+background-position: 0px 0px;
 }
 
 a[href|="/ccfun"] {
@@ -197,7 +21,224 @@ float:left;
 width:150px;
 height:125px;
 background-repeat:no-repeat;
-background-image:url(%%ccfun%%);
+background-image:url(%%sheet1%%);
+background-position: 0px -200px;
+}
+
+a[href|="/ccshy"] {
+float:left;
+width:148px;
+height:160px;
+background-repeat:no-repeat;
+background-image:url(%%sheet1%%);
+background-position: -200px 0px;
+}
+
+a[href|="/ccpose"] {
+float:left;
+width:140px;
+height:168px;
+background-repeat:no-repeat;
+background-image:url(%%sheet1%%);
+background-position: -200px -200px;
+}
+
+/*stylesheet1 "sheet1" end*/
+
+
+/*stylesheet2 "sheet2"*/
+
+a[href|="/clarity"] {
+float:left;
+width:200px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%sheet2%%);
+background-position: 0px 0px;
+}
+
+a[href|="/ccsoawesome"] {
+float:left;
+width:126px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%sheet2%%);
+background-position: -200px 0px;
+}
+
+a[href|="/ccgiggle"] {
+float:left;
+width:150px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%sheet2%%);
+background-position: 0px -200px;
+}
+
+a[href|="/cceww"] {
+float:left;
+width:150px;
+height:145px;
+background-repeat:no-repeat;
+background-image:url(%%sheet2%%);
+background-position: -200px -200px;
+}
+
+/*stylesheet2 "sheet2" end*/
+
+
+/*stylesheet3 "sheet3"*/
+
+a[href|="/flitteryeah"] {
+float:left;
+width:129px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%sheet3%%);
+background-position: 0px 0px;
+}
+
+a[href|="/ccpose2"] {
+float:left;
+width:150px;
+height:165px;
+background-repeat:no-repeat;
+background-image:url(%%sheet3%%);
+background-position: -200px 0px;
+}
+
+a[href|="/ccunamused"] {
+float:left;
+width:103px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%sheet3%%);
+background-position: 0px -200px;
+}
+
+a[href|="/ccstare"] {
+float:left;
+width:150px;
+height:138px;
+background-repeat:no-repeat;
+background-image:url(%%sheet3%%);
+background-position: -200px -200px;
+}
+
+/*stylesheet3 "sheet3" end*/
+
+
+
+/*stylesheet4 "sheet4"*/
+
+a[href|="/ccpaper"] {
+float:left;
+width:150px;
+height:163px;
+background-repeat:no-repeat;
+background-image:url(%%sheet4%%);
+background-position: 0px 0px;
+}
+
+a[href|="/flitterponytail"] {
+float:left;
+width:147px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%sheet4%%);
+background-position: -200px 0px;
+}
+
+a[href|="/ccshrug"] {
+float:left;
+width:150px;
+height:141px;
+background-repeat:no-repeat;
+background-image:url(%%sheet4%%);
+background-position: 0px -200px;
+}
+
+a[href|="/ccwave"] {
+float:left;
+width:122px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%sheet4%%);
+background-position: -200px -200px;
+}
+
+/*stylesheet4 "sheet4" end*/
+
+
+/*stylesheet5 "sheet5"*/
+
+a[href|="/ccdeal"] {
+float:left;
+width:139px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%sheet5%%);
+background-position: 0px 0px;
+}
+
+
+a[href|="/flittercute"] {
+float:left;
+width:102px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%sheet5%%);
+background-position: -200px 0px;
+}
+
+a[href|="/ccunimpressed"] {
+float:left;
+width:128px;
+height:160px;
+background-repeat:no-repeat;
+background-image:url(%%sheet5%%);
+background-position: 0px -200px;
+}
+
+a[href|="/ccshock"] {
+float:left;
+width:120px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%sheet5%%);
+background-position: -200px -200px;
+}
+
+/*stylesheet5 "sheet5" end*/
+
+
+/*stylesheet6 "sheet6"*/
+
+a[href|="/ccmad"] {
+float:left;
+width:158px;
+height:140px;
+background-repeat:no-repeat;
+background-image:url(%%sheet6%%);
+background-position: 0px 0px;
+}
+
+a[href|="/cchmm"] {
+float:left;
+width:134px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%sheet6%%);
+background-position: -200px 0px;
+}
+
+a[href|="/flitterhappy"] {
+float:left;
+width:115px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%sheet6%%);
+background-position: 0px -200px;
 }
 
 a[href|="/ccsegue"] {
@@ -205,8 +246,273 @@ float:left;
 width:92px;
 height:150px;
 background-repeat:no-repeat;
-background-image:url(%%ccsegue%%);
+background-image:url(%%sheet6%%);
+background-position: -200px -200px;
 }
+
+/*stylesheet6 "sheet6" end*/
+
+
+/*stylesheet7 "sheet7"*/
+
+
+a[href|="/ccpoint"] {
+float:left;
+width:149px;
+height:160px;
+background-repeat:no-repeat;
+background-image:url(%%sheet7%%);
+background-position: 0px 0px;
+}
+
+a[href|="/ccsalute"] {
+float:left;
+width:150px;
+height:130px;
+background-repeat:no-repeat;
+background-image:url(%%sheet7%%);
+background-position: -200px 0px;
+}
+
+a[href|="/flitterbug"] {
+float:left;
+width:119px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%sheet7%%);
+background-position: 0px -200px;
+}
+
+a[href|="/ccgoon"] {
+float:left;
+width:150px;
+height:105px;
+background-repeat:no-repeat;
+background-image:url(%%sheet7%%);
+background-position: -200px -200px;
+}
+
+/*stylesheet7 "sheet7" end*/
+
+
+/*stylesheet8 "sheet8"*/
+
+a[href|="/ccarmor"] {
+float:left;
+width:150px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%sheet8%%);
+background-position: 0px 0px;
+}
+
+a[href|="/ccwat"] {
+float:left;
+width:92px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%sheet8%%);
+background-position: -200px 0px;
+}
+
+a[href|="/cchello"] {
+float:left;
+width:93px;
+height:180px;
+background-repeat:no-repeat;
+background-image:url(%%sheet8%%);
+background-position: 0px -200px;
+}
+
+a[href|="/cchuzzah"] {
+float:left;
+width:151px;
+height:160px;
+background-repeat:no-repeat;
+background-image:url(%%sheet8%%);
+background-position: -200px -200px;
+}
+
+/*stylesheet8 "sheet8" end*/
+
+
+/*stylesheet9 "sheet9"*/
+
+a[href|="/cchappy"] {
+float:left;
+width:130px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%sheet9%%);
+background-position: 0px 0px;
+}
+
+a[href|="/ccsocks2"] {
+float:left;
+width:141px;
+height:160px;
+background-repeat:no-repeat;
+background-image:url(%%sheet9%%);
+background-position: -200px 0px;
+}
+
+a[href|="/ccsleep"] {
+float:left;
+width:190px;
+height:127px;
+background-repeat:no-repeat;
+background-image:url(%%sheet9%%);
+background-position: 0px -200px;
+}
+
+a[href|="/ccblush"] {
+float:left;
+width:150px;
+height:147px;
+background-repeat:no-repeat;
+background-image:url(%%sheet9%%);
+background-position: -200px -200px;
+}
+
+/*stylesheet9 "sheet9" end*/
+
+
+/*stylesheet10 "sheet10"*/
+
+a[href|="/ccstretch"] {
+float:left;
+width:150px;
+height:139px;
+background-repeat:no-repeat;
+background-image:url(%%sheet10%%);
+background-position: 0px 0px;
+}
+
+a[href|="/ccyeah"] {
+float:left;
+width:180px;
+height:170px;
+background-repeat:no-repeat;
+background-image:url(%%sheet10%%);
+background-position: -200px 0px;
+}
+
+a[href|="/ccsocks"] {
+float:left;
+width:120px;
+height:150px;
+background-repeat:no-repeat;
+background-image:url(%%sheet10%%);
+background-position: 0px -200px;
+}
+
+a[href|="/ccsmile"] {
+float:left;
+width:137px;
+height:160px;
+background-repeat:no-repeat;
+background-image:url(%%sheet10%%);
+background-position: -200px -200px;
+}
+
+/*stylesheet10 "sheet10" end*/
+
+
+/*stylesheet11 "sheet11"*/
+
+a[href|="/rarichaser"] {
+float:left;
+width:150px;
+height:180px;
+background-repeat:no-repeat;
+background-image:url(%%sheet11%%);
+background-position: 0px 0px;
+}
+
+a[href|="/cclook"] {
+display: block;
+clear: none;
+float:left;
+width:160px;
+height:156px;
+background-repeat:no-repeat;
+background-image:url(%%sheet11%%);
+background-position: -200px -200px;
+}
+
+a[href|="/cchi"] {
+display: block;
+clear: none;
+float:left;
+width:100px;
+height:195px;
+background-repeat:no-repeat;
+background-image:url(%%sheet11%%);
+background-position: 0px -200px;
+}
+
+a[href|="/flitterlaugh"] {
+display: block;
+clear: none;
+float:left;
+width:135px;
+height:160px;
+background-repeat:no-repeat;
+background-image:url(%%sheet11%%);
+background-position: -200px 0px;
+}
+
+/*stylesheet11 "sheet11" end*/
+
+
+
+/*stylesheet12 "sheet12"*/
+
+a[href|="/cclove"] {
+float:left;
+width:150px;
+height:208px;
+background-repeat:no-repeat;
+background-image:url(%%sheet12%%);
+background-position: 0px 0px;
+}
+
+a[href|="/ccfly"] {
+float:left;
+width:202px;
+height:80px;
+background-repeat:no-repeat;
+background-image:url(%%sheet12%%);
+background-position: 0px -250px;
+}
+
+/*stylesheet12 "sheet12" end*/
+
+
+/*stylesheet13 "sheet13"*/
+
+a[href|="/highhoof"] {
+float:left;
+width:250px;
+height:167px;
+background-repeat:no-repeat;
+background-image:url(%%sheet13%%);
+background-position: 0px 0px;
+}
+
+a[href|="/highhoof2"] {
+float:left;
+width:329px;
+height:142px;
+background-repeat:no-repeat;
+background-image:url(%%sheet13%%);
+background-position: 0px -200px;
+}
+
+/*stylesheet13 "sheet13" end*/
+
+
+/*un-assigned*/
 
 a[href|="/ccxrdsnuggle"] {
 float:left;
@@ -216,155 +522,73 @@ background-repeat:no-repeat;
 background-image:url(%%ccxrdsnuggle%%);
 }
 
-a[href|="/ccsocks"] {
+a[href|="/cccool"] {
 float:left;
-width:120px;
-height:150px;
+width:138px;
+height:160px;
 background-repeat:no-repeat;
-background-image:url(%%ccsocks%%);
+background-image:url(%%cccool%%);
 }
 
-a[href|="/ccsoawesome"] {
+a[href|="/cchappy2"] {
 float:left;
-width:126px;
-height:150px;
+width:170px;
+height:146px;
 background-repeat:no-repeat;
-background-image:url(%%ccsoawesome%%);
+background-image:url(%%cchappy2%%);
 }
+/*un-assigned end*/
 
-a[href|="/cchappy"] {
-float:left;
-width:130px;
-height:150px;
-background-repeat:no-repeat;
-background-image:url(%%cchappy%%);
+a.author[href$="LunarMist2"] {  
+font-size:0!important;  
+    overflow:hidden;  
+    display:inline-block;  
+    content: "";  
+    }
+
+a.author[href$="LunarMist2"]:before{  
+    font-size:10px!important;  
+    visibility:visible!important;  
+    }
+
+a.author[href$="LunarMist2"]:before {content:"MistyMistMistMist-Kun"}
+
+a.author[href$="BurChaBow"] {  
+font-size:0!important;  
+    overflow:hidden;  
+    display:inline-block;  
+    content: "";  
+    }
+
+a.author[href$="BurChaBow"]:before{  
+    font-size:10px!important;  
+    visibility:visible!important;  
+    }
+
+a.author[href$="BurChaBow"]:before {content:"Captain Burchy"}
+
+a.author[href$="durpyDash"] {  
+font-size:0!important;  
+    overflow:hidden;  
+    display:inline-block;  
+    content: "";  
+    }
+
+a.author[href$="durpyDash"]:before{  
+    font-size:10px!important;  
+    visibility:visible!important;  
+    }
+
+a.author[href$="durpyDash"]:before {content:"8=====D"}
+
+a.author[href$="-20"] {
+font-size:0!important;
+overflow:hidden;
+display:inline-block;
+content: "";
 }
-
-a[href|="/ccwave"] {
-float:left;
-width:122px;
-height:150px;
-background-repeat:no-repeat;
-background-image:url(%%ccwave%%);
+a.author[href$="-20"]:before{
+font-size:10px!important;
+visibility:visible!important;
 }
-
-a[href|="/flitterhappy"] {
-float:left;
-width:115px;
-height:150px;
-background-repeat:no-repeat;
-background-image:url(%%flitterhappy%%);
-}
-
-a[href|="/flittercute"] {
-float:left;
-width:102px;
-height:150px;
-background-repeat:no-repeat;
-background-image:url(%%flittercute%%);
-}
-
-a[href|="/flitterponytail"] {
-float:left;
-width:147px;
-height:150px;
-background-repeat:no-repeat;
-background-image:url(%%Flitterponytail%%);
-}
-
-a[href|="/flitteryeah"] {
-float:left;
-width:129px;
-height:150px;
-background-repeat:no-repeat;
-background-image:url(%%flitter-yeah%%);
-}
-
-a[href|="/flitterbug"] {
-float:left;
-width:119px;
-height:150px;
-background-repeat:no-repeat;
-background-image:url(%%flitterbug%%);
-}
-
-a[href|="/clarity"] {
-float:left;
-width:200px;
-height:150px;
-background-repeat:no-repeat;
-background-image:url(%%clarity%%);
-}
-
-a[href|="/ccshy"] {
-    float:left;
-    width:148px;
-    height:160px;
-    background-repeat:no-repeat;
-    background-image:url(%%ccshy%%);
-}
-
-a[href|="/ccmad"] {
-    float:left;
-    width:158px;
-    height:140px;
-    background-repeat:no-repeat;
-    background-image:url(%%ccmad%%);
-}
-
-a[href|="/cchuzzah"] {
-    float:left;
-    width:151px;
-    height:160px;
-    background-repeat:no-repeat;
-    background-image:url(%%cchuzzah%%);
-}
-
-a[href|="/ccsmile"] {
-    float:left;
-    width:137px;
-    height:160px;
-    background-repeat:no-repeat;
-    background-image:url(%%ccsmile%%);
-}
-
-a[href|="/ccunimpressed"] {
-    float:left;
-    width:128px;
-    height:160px;
-    background-repeat:no-repeat;
-    background-image:url(%%ccunimpressed%%);
-}
-
-a[href|="/ccpoint"] {
-    float:left;
-    width:149px;
-    height:160px;
-    background-repeat:no-repeat;
-    background-image:url(%%ccpoint%%);
-}
-
-a[href|="/ccfly"] {
-    float:left;
-    width:202px;
-    height:80px;
-    background-repeat:no-repeat;
-    background-image:url(%%ccfly%%);
-}
-
-a[href|="/cchello"] {
-    float:left;
-    width:93px;
-    height:180px;
-    background-repeat:no-repeat;
-    background-image:url(%%cchello%%);
-}
-
-a[href|="/ccsocks2"] {
-    float:left;
-    width:141px;
-    height:160px;
-    background-repeat:no-repeat;
-    background-image:url(%%ccsocks2%%);
-}
-
+a.author[href$="-20"]:before {content:"IS DRUNK WITH POWER"}
