--- a/source-css/himntor.css
+++ b/source-css/himntor.css
@@ -257,3 +257,13 @@ a[href|="/swordy"] {
     background-repeat: no-repeat;
     background-image: url(%%swordy%%)
     }
+
+a[href|="/iseeham"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 297px;
+    height: 296px;
+    background-repeat: no-repeat;
+    background-image: url(%%iseeham%%)
+    }
