--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -586,7 +586,7 @@ a[href|="/spikeeyebrows"] {
     background-image: url(%%spikeeyebrows%%)
     }
 
-/*a[href|="/catdash"] {
+a[href|="/catdash"] {
     display: block;
     clear: none;
     float: left;
@@ -594,7 +594,6 @@ a[href|="/spikeeyebrows"] {
     height: 150px;
     background-image: url(%%catdash%%)
     }
-*/
 a[href|="/flittergasp"] {
     display: block;
     clear: none;
