--- a/source-css/cadance.css
+++ b/source-css/cadance.css
@@ -285,7 +285,7 @@ h1 {
 .flair-cadence
 {background-position:0 -1300%}
 
-.flair-cloudchaser
+.flair-buttchaser
 {background-position:0 -1400%}
 
 .flair-daisy
@@ -433,4 +433,14 @@ a[href|="/cadtellmemore"] {
     width: 98px;
     height: 150px;
     background-position: -927px -0px;
+}
+
+a[href|="/cadcheer"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 118px;
+    height: 150px;
+    background-image: url(%%Pi5dykx%%)
+
 }
