--- a/source-css/mylittlefalloutdiary.css
+++ b/source-css/mylittlefalloutdiary.css
@@ -545,6 +545,13 @@ padding: 4px;
 -webkit-border-top-left-radius: 7px 
 }
 
+.tabmenu li a {
+border-radius-topleft: 5px;
+border-radius-topright: 5px;
+border-radius-topright: 5px;
+border-radius-topleft: 5px;
+}
+
 .sidebox .spacer {
 display: none;
 }
