--- a/source-css/mylittleicons.css
+++ b/source-css/mylittleicons.css
@@ -230,7 +230,7 @@
         height: 190px;
         background-image: url(%%jay%%)
         }
-    a[href|="/ftfy"], a[href|="/i02"] {
+    a[href|="/ftfy"], a[href|="/i02"], a[href|="/yamtophat"] {
         display: block;
         clear: none;
         float: left;
