--- a/source-css/pinkquisition.css
+++ b/source-css/pinkquisition.css
@@ -578,9 +578,30 @@ a[href|="/ppbraces"] {
     height: 150px;
     background-image: url(%%ppbraces%%) 
     }
-
-
-
+a[href|="/ppcatsuit"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 150px;
+    height: 147px;
+    background-image: url(%%ppcatsuit%%) 
+    }
+a[href|="/flitterbucket"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 112px;
+    height: 150px;
+    background-image: url(%%flitbucket%%) 
+    }
+a[href|="/pinkiepan"] {
+    display: block;
+    clear: none;
+    float: left;
+    width: 141px;
+    height: 150px;
+    background-image: url(%%pinkiepan%%) 
+    }
 
 /*Side Bar*/
 
