--- a/source-css/twiquisition.css
+++ b/source-css/twiquisition.css
@@ -1,111 +1,3 @@
-.stylesheet-customize-container { width: 100%; }
-#subreddit_stylesheet { display: block; overflow: hidden; }
-.sheets { margin: 0;}
-#stylesheet_contents {
-  padding-left: 5px;
-  padding-top: 5px;
-  background-color: white;
-  color: #042eae;
-  height: 500px;
-}
-.morelink
-{
-font-weight:normal;
-letter-spacing:0;
-background: purple;
-border: none;
--moz-border-radius:2px;
--webkit-border-radius:2px;
--khtml-border-radius:2px;
-border-radius:2px;
-height: 30px;
-line-height: 30px;
-overflow: hidden;
-color: white;
-}
-
-.morelink:hover
-{
-background: #A6B9CB;
-background-color: #FF0000;
-border-color: #FF0000;
-}
-
-.morelink .nub
-{
-display: none;
-}
-
-.morelink
-{
-color:#FFF;
-font-family:Verdana, Arial, sans-serif;
-font-size:16px;
-width: 145px;
-}
-
-.morelink a, .morelink a:hover
-{
-color: white;
-}
-
-.sidebox.submit-link .morelink::before
-{
-display: block;
-clear: none;
-content: "Submit a Link";
-font-size: 95%;
-}
-
-.sidebox.submit-text .morelink::before
-{
-display: block;
-clear: none;
-content: "Submit a Self Post";
-font-size: 90%;
-}
-
-.sidebox.submit .morelink a
-{
-position: absolute;
-top: 0;
-padding-left: 1000px;
-font-size: 0px;
-text-align: right;
-color: #56a6f7;
-}
-
-.sidebox.submit.submit-link {
-width: 150px;
-}
-
-.sixebos.submit.submit-text
-{
-margin-top: -42px;
-margin-left: 153px;
-}
-
-.sidebox.create
-{
-display: none;
-}
-
-.sidebox.submit.disabled
-{
-display: none;
-}
-
-
-
-
-
-body {
-background: url(%%twilightbackground%%)
-no-repeat fixed center center
-}
-
-#header {background-color: #BB75C9;}
-
 a[href|="/twidetermined"] {
 display: block;
 clear: none;
@@ -194,19 +86,225 @@ width: 256px;
 height: 376px;
 background-image: url(%%8bitsombra%%);
 }
-
-
+a[href|="/assrub"] {
+display: block;
+clear: none;
+float: left;
+width: 93px;
+height: 100px;
+background-image: url(%%assrub%%);
+}
+a[href|="/twiohreally"] {
+display: block;
+clear: none;
+float: left;
+width: 158px;
+height: 150px;
+background-image: url(%%Twiohreally%%);
+}
+a[href|="/twilipride"] {
+display: block;
+clear: none;
+float: left;
+width: 120px;
+height: 150px;
+background-image: url(%%twilipride%%);
+}
+a[href|="/twinervouslaugh"] {
+display: block;
+clear: none;
+float: left;
+width: 137px;
+height: 150px;
+background-image: url(%%twinervouslaugh%%);
+}
+a[href|="/twidrugs"] {
+display: block;
+clear: none;
+float: left;
+width: 127px;
+height: 150px;
+background-image: url(%%twidrugs%%);
+}
+a[href|="/twipetme"] {
+display: block;
+clear: none;
+float: left;
+width: 180px;
+height: 150px;
+background-image: url(%%twipetme%%);
+}
+a[href|="/twilightbattle"] {
+display: block;
+clear: none;
+float: left;
+width: 91px;
+height: 150px;
+background-image: url(%%twilightbattle%%);
+}
+a[href|="/twilightworried"] {
+display: block;
+clear: none;
+float: left;
+width: 207px;
+height: 150px;
+background-image: url(%%twilightworried%%);
+}
+a[href|="/twimagicwings"] {
+display: block;
+clear: none;
+float: left;
+width: 196px;
+height: 150px;
+background-image: url(%%twimagicwings%%);
+}
+a[href|="/twilightfly"] {
+display: block;
+clear: none;
+float: left;
+width: 299px;
+height: 150px;
+background-image: url(%%twilightfly%%);
+}
+a[href|="/twidress"] {
+display: block;
+clear: none;
+float: left;
+width: 139px;
+height: 150px;
+background-image: url(%%twidress%%);
+}
+a[href|="/twifeather"] {
+display: block;
+clear: none;
+float: left;
+width: 131px;
+height: 150px;
+background-image: url(%%twifeather%%);
+}
+a[href|="/twiohilikethis"] {
+display: block;
+clear: none;
+float: left;
+width: 114px;
+height: 150px;
+background-image: url(%%twiohilikethis%%);
+}
+a[href|="/twiimsorrywhat"] {
+display: block;
+clear: none;
+float: left;
+width: 100px;
+height: 150px;
+background-image: url(%%twiimsorrywhat%%);
+}
+a[href|="/twinurse"] {
+display: block;
+clear: none;
+float: left;
+width: 150px;
+height: 150px;
+background-image: url(%%twinurse%%);
+}
+a[href|="/twifeather"] {
+display: block;
+clear: none;
+float: left;
+width: 131px;
+height: 150px;
+background-image: url(%%twifeather%%);
+}
+a[href|="/twihaveyouknow"] {
+display: block;
+clear: none;
+float: left;
+width: 192px;
+height: 150px;
+background-image: url(%%twihaveyouknow%%);
+}
+a[href|="/scientwi"] {
+display: block;
+clear: none;
+float: left;
+width: 165px;
+height: 150px;
+background-image: url(%%scientwi%%);
+}
+a[href|="/dmtwi"] {
+display: block;
+clear: none;
+float: left;
+width: 198px;
+height: 150px;
+background-image: url(%%dmtwi%%);
+}
+a[href|="/twicuteblush"] {
+display: block;
+clear: none;
+float: left;
+width: 200px;
+height: 150px;
+background-image: url(%%twicuteblush%%);
+}
+a[href|="/twiskates"] {
+display: block;
+clear: none;
+float: left;
+width: 210px;
+height: 150px;
+background-image: url(%%twiskates%%);
+}
+a[href|="/booksareawesome"] {
+display: block;
+clear: none;
+float: left;
+width: 195px;
+height: 150px;
+background-image: url(%%booksareawesome%%);
+}
+a[href|="/twilirage"] {
+display: block;
+clear: none;
+float: left;
+width: 207px;
+height: 150px;
+background-image: url(%%twilirage%%);
+}
+a[href|="/stillbestpony"] {
+display: block;
+clear: none;
+float: left;
+width: 257px;
+height: 150px;
+background-image: url(%%stillbestpony%%);
+}
+a[href|="/enderslayer"] {
+display: block;
+clear: none;
+float: left;
+width: 168px;
+height: 150px;
+background-image: url(%%enderslayer%%);
+}
+a[href|="/twilightthegrey"] {
+display: block;
+clear: none;
+float: left;
+width: 120px;
+height: 150px;
+background-image: url(%%twilightthegrey%%);
+}
 .subscribers .word {
 display: none;
 }  
 .subscribers .number::after {
-content: " OP fat Alicorns";
+content:  " Purple Smart Fans";
 }
 .users-online .word {
 display: none;
 }  
 .users-online .number::after {
-content: " Twilight-lovers here now";
+content: " Twilight Lovers Here Now";
 }
 .side .helplink + .title h1 { display: none; } .side .helplink + .title::before { content: 'Masters of the pone'; display: block; font-size: 130%; color: gray; text-transform: uppercase;
 }
@@ -220,8 +318,3 @@ padding:0px;
 background: url(%%spritesheet%%) no-repeat -9999px -9999px;
 display:inline-block;
 }
-.flair-cadancesmug{ background-position: 0 0; width: 35px; height: 36px; } 
-.flair-dashaloo{ background-position: 0 -86px; width: 35px; height: 44px; } 
-.flair-spitfireface{ background-position: 0 -180px; width: 35px; height: 41px; } 
-
-/*Twilight is a super fat ugly pone and a useless princess.*/
